@@ -133,28 +133,30 @@ environment-vars =
 
 eggs =
     ${buildout:eggs}
-    Plone
-    Products.PloneHotfix20150910
-    Products.PloneHotfix20151208
-    Pillow
-# collective.emaillogin4 does some patches, so best load it early.
+    archetypes.schemaextender
     collective.emaillogin4
-    Products.minaraad
-    Products.OrderableReferenceField
+    collective.mailchimp
+    collective.recaptcha
+    eea.facetednavigation
+    elementtree
+    jquery.pyproxy
     minaraad.projects
     minaraad.theme
-    elementtree
-    Products.DataGridField
-    Products.PloneFormGen
-    Products.SimpleAttachment
-    collective.recaptcha
-    jquery.pyproxy
     munin.zope
-    archetypes.schemaextender
+    Pillow
+    Plone
+    plone.api
     plone.app.theming
     plone.app.themingplugins
-    collective.mailchimp
-    plone.api
+    plonetheme.sunburst
+    Products.DataGridField
+    Products.minaraad
+    Products.OrderableReferenceField
+    Products.PloneFormGen
+    Products.PloneHotfix20150910
+    Products.PloneHotfix20151208
+    Products.SimpleAttachment
+# collective.emaillogin4 does some patches, so best load it early.
 
 zcml =
     collective.recaptcha
@@ -163,7 +165,6 @@ zcml =
     jquery.pyproxy
     munin.zope
 
-resources = ${buildout:directory}/resources
 locales = ${buildout:directory}/locales
 products =
 
