@@ -1,8 +1,0 @@
-<?xml version="1.0"?>
-<object name="portal_css" meta_type="Stylesheets Registry">
- <stylesheet id="++theme++minaraad/css/style.css" />
- <stylesheet id="print.css" remove="True" />
- <stylesheet id="++theme++minaraad/css/print.css" media="print" />
- <stylesheet id="mobile.css" remove="True" />
- <stylesheet id="++theme++minaraad/css/mobile.css" media="handheld, screen and (max-device-width: 480px)" enabled="False" />
-</object>
