@@ -11,6 +11,9 @@ collective.mailchimp = 1.4.1
 collective.recaptcha = 1.1.5
 collective.recipe.supervisor = 0.19
 collective.recipe.template = 1.11
+eea.facetednavigation = 8.6
+eea.jquery = 8.6
+eea.faceted.vocabularies = 5.3
 Genshi = 0.6
 gocept.munin = 0.1
 gocept.recipe.env = 1.0
