@@ -4,6 +4,9 @@ History of this buildout
 5.1.14 (unreleased)
 -------------------
 
+- Add vocabularies for facetednavigation
+  [coen]
+
 - Unassign right column portlets
   [coen]
 
